--- a/Gyde/View Controllers/TAMapItVC.xib
+++ b/Gyde/View Controllers/TAMapItVC.xib
@@ -44,7 +44,7 @@
 						<string key="NSFrameSize">{320, 372}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="165742742"/>
+						<reference key="NSNextKeyView" ref="6257521"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">5</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,7 +57,7 @@
 					<object class="IBMKMapView" id="551508896">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{0, 119}, {320, 199}}</string>
+						<string key="NSFrame">{{0, 79}, {320, 239}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="801040042"/>
@@ -155,7 +155,7 @@
 					<object class="IBUIImageView" id="414032626">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 104}, {320, 2}}</string>
+						<string key="NSFrame">{{0, 64}, {320, 2}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="551508896"/>
@@ -170,7 +170,7 @@
 					<object class="IBUIImageView" id="739312677">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{8, 53}, {304, 44}}</string>
+						<string key="NSFrame">{{8, 13}, {304, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="836384872"/>
@@ -185,7 +185,7 @@
 					<object class="IBUITextField" id="836384872">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{23, 53}, {272, 40}}</string>
+						<string key="NSFrame">{{23, 13}, {272, 40}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="414032626"/>
@@ -246,7 +246,7 @@
 										<string key="NSFrame">{{13, 4}, {294, 36}}</string>
 										<reference key="NSSuperview" ref="642158157"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="792266284"/>
+										<reference key="NSNextKeyView" ref="165742742"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -309,7 +309,7 @@
 					<object class="IBUIImageView" id="165742742">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 44}, {320, 5}}</string>
+						<string key="NSFrameSize">{320, 5}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="739312677"/>
@@ -325,7 +325,7 @@
 				<string key="NSFrame">{{0, 64}, {320, 367}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
+				<reference key="NSNextKeyView" ref="792266284"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -460,11 +460,6 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">24</int>
-						<reference key="object" ref="836384872"/>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">27</int>
 						<reference key="object" ref="414032626"/>
 						<reference key="parent" ref="191373211"/>
@@ -517,11 +512,6 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">23</int>
-						<reference key="object" ref="739312677"/>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">30</int>
 						<reference key="object" ref="1033156930"/>
 						<reference key="parent" ref="801040042"/>
@@ -535,6 +525,16 @@
 						<int key="objectID">32</int>
 						<reference key="object" ref="665461002"/>
 						<reference key="parent" ref="801040042"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">24</int>
+						<reference key="object" ref="836384872"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">23</int>
+						<reference key="object" ref="739312677"/>
+						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
 			</object>
