--- a/Gyde/View Controllers/TAShareVC.xib
+++ b/Gyde/View Controllers/TAShareVC.xib
@@ -545,7 +545,6 @@
 						<string key="NSFrame">{{0, 362}, {320, 5}}</string>
 						<reference key="NSSuperview" ref="117351266"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -951,25 +950,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">TAShareVC</string>
 					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="goBack:">id</string>
-						<string key="recommendButtonTapped:">id</string>
-						<string key="shareButtonTapped:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="goBack:">
-							<string key="name">goBack:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="recommendButtonTapped:">
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">recommendButtonTapped:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">recommendButtonTapped:</string>
+						<object class="IBActionInfo" key="NS.object.0">
 							<string key="name">recommendButtonTapped:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="shareButtonTapped:">
-							<string key="name">shareButtonTapped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
+					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="captionField">UITextField</string>
 						<string key="cityLabel">UILabel</string>
